# learnings-and-experiments

./: .gitignore  README.md
rust/1brc/: .gitignore  Cargo.toml  README.md
rust/1brc/src/: main.rs
rust/doubly_linked_list/: Cargo.toml  README.md
rust/doubly_linked_list/src/: lib.rs  macros.rs  prelude.rs
rust/doubly_linked_list/tests/: unit_tests.rs
rust/hashing/: Cargo.toml
rust/hashing/src/: lib.rs
rust/hashing/tests/: unit_tests.rs
rust/inplace_sorting/: Cargo.toml
rust/inplace_sorting/src/: lib.rs
rust/inplace_sorting/tests/: unit_tests.rs
rust/iterators/src/: lib.rs
rust/linked_list/: README.md
rust/linked_list/src/: iterators.rs  lib.rs
rust/linked_list/tests/: unit_tests.rs
