[package]
name = "one_brc"
version = "0.1.0"
edition = "2021"
default-run = "one_brc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
fxhash = { version = "0.2.1"}


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"



[profile.release.build-override]
opt-level = 2
codegen-units = 1
debug = false

